overflow auto div fix
overflow auto div fix

--- a/gostatic/css/framework.css
+++ b/gostatic/css/framework.css
@@ -6,12 +6,15 @@ body {
 }
 
 #header {
-	background-color:	black;
+	background-color:	#2e2e2e;
 	color:				white;
+	padding:			2%;
+	overflow:			auto;
 }
 
 #content {
-	background-color:	lightgrey;
+	background-color:	#575757;
+	overflow:			auto;
 }
 #content .content-block {
 	background-color:	white;
@@ -22,6 +25,11 @@ body {
 
 #footer {
 	font-size:			0.8em;
-	background-color:	darkgrey;
+	background-color:	#2e2e2e;
 	color:				white;
+	overflow:			auto;
+}
+#footer .content-block {
+	margin:				2% auto;
+	width:				75%;
 }
